Changes for maven central distribution