@@ -21,6 +21,21 @@
         <url>https://github.com/lanthale/LibRawFX.git</url>
     </scm>
     
+    <developers>
+        <developer>
+            <id>clemens</id>
+            <name>Clemens Lanthaler</name>
+            <email>clemens.lanthaler@itarchitects.at</email>
+            <organization>ITArchitects</organization>
+            <organizationUrl>http://www.itarchitects.at/</organizationUrl>
+            <roles>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>+1</timezone>
+        </developer>
+    </developers>
+    
     <distributionManagement>
         <repository>
             <id>ossrh</id>
@@ -101,13 +116,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.2.0</version>                
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                        <configuration>                            
+                            <additionalJOptions>                                
+                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</additionalJOption>                                
+                                <additionalJOption>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</additionalJOption>
+                            </additionalJOptions>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>            
